--- a/installations/templates/installations/orders_modal_scheduled.html
+++ b/installations/templates/installations/orders_modal_scheduled.html
@@ -1,15 +1,15 @@
 {% if installations %}
     <div class="table-responsive">
         <table class="table table-bordered table-hover" width="100%" cellspacing="0">
-            <thead class="thead-dark">
+            <thead style="background-color: #6c757d !important;">
                 <tr>
-                    <th class="text-white">رقم الطلب</th>
-                    <th class="text-white">العميل</th>
-                    <th class="text-white">تاريخ التركيب</th>
-                    <th class="text-white">موعد التركيب</th>
-                    <th class="text-white">الفريق</th>
-                    <th class="text-white">الحالة</th>
-                    <th class="text-white">الإجراءات</th>
+                    <th style="color: white !important;">رقم الطلب</th>
+                    <th style="color: white !important;">العميل</th>
+                    <th style="color: white !important;">تاريخ التركيب</th>
+                    <th style="color: white !important;">موعد التركيب</th>
+                    <th style="color: white !important;">الفريق</th>
+                    <th style="color: white !important;">الحالة</th>
+                    <th style="color: white !important;">الإجراءات</th>
                 </tr>
             </thead>
             <tbody class="bg-white">
