--- a/installations/templates/installations/orders_modal_total.html
+++ b/installations/templates/installations/orders_modal_total.html
@@ -14,7 +14,7 @@
             {% if ready_orders %}
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead class="thead-dark" style="background-color: #8B7355 !important;">
+                        <thead style="background-color: #6c757d !important;">
                             <tr>
                                 <th style="color: white !important;">رقم الطلب</th>
                                 <th style="color: white !important;">رقم العقد</th>
@@ -112,7 +112,7 @@
             {% if scheduled_installations %}
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead class="thead-dark" style="background-color: #8B7355 !important;">
+                        <thead style="background-color: #6c757d !important;">
                             <tr>
                                 <th style="color: white !important;">رقم الطلب</th>
                                 <th style="color: white !important;">رقم العقد</th>
@@ -204,7 +204,7 @@
             {% if in_progress_installations %}
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead class="thead-dark" style="background-color: #8B7355 !important;">
+                        <thead style="background-color: #6c757d !important;">
                             <tr>
                                 <th style="color: white !important;">رقم الطلب</th>
                                 <th style="color: white !important;">رقم العقد</th>
@@ -296,7 +296,7 @@
             {% if completed_installations %}
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead class="thead-dark" style="background-color: #8B7355 !important;">
+                        <thead style="background-color: #6c757d !important;">
                             <tr>
                                 <th style="color: white !important;">رقم الطلب</th>
                                 <th style="color: white !important;">رقم العقد</th>
